--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  background-color: #0A0E21;
+}
+
+.titulo{
+  font-family: 'Raleway', sans-serif;
+  color: white;
+  text-align: center;
+
+}
+.row{
+  margin-top: 20px;
+}
+.btn-color{
+  background-color: #FF3366;
+  border-color: #FF3366;
+  border-radius: 25px;
+  width: 100%;
+}
