--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,43 +1,72 @@
 <div class="row">
-  <div class="col-lg-4 mt-5 offset-lg-4">
-    <h2 class="titulo">Bmi CALC</h2>
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="fondoItem">
-          <i class="fas fa-mars"></i>
-          <p>masculino</p>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="fondoItem">
-          2
-        </div>
-      </div>
-    </div>
+  <div class="col-lg-4 offset-lg-4">
+      <h2 class="titulo">BMI CALCULATOR</h2>
       <div class="row">
-        <div class="col-lg-12">
-          <div class="fondoItem">
-
+          <div class="col-lg-6">
+              <div class="fondoItem" [ngClass]="{ 'sexoDesactivo': sexo === 'Femenino' }">
+                  <div class="contenedor" style="cursor: pointer;" (click)="masculino()">
+                      <i class="fas fa-mars sexo"></i>
+                      <p>Masculino</p>
+                  </div>
+              </div>
           </div>
-        </div>
+          <div class="col-lg-6">
+              <div class="fondoItem" [ngClass]="{ 'sexoDesactivo': sexo === 'Masculino' }">
+                  <div class="contenedor" style="cursor: pointer;" (click)="femenino()">
+                      <i class="fas fa-venus sexo"></i>
+                      <p>Femenino</p>
+                  </div>
+              </div>
+          </div>
       </div>
       <div class="row">
-        <div class="col-lg-6">
-          <div class="fondoItem">
-
-
+          <div class="col-lg-12">
+              <div class="fondoItem">
+                  <div class="contenedor">
+                      <p>Altura</p>
+                      <div class="estiloNumero">{{ altura }}
+                          <span class="cm">cm</span>
+                      </div>
+                      <input type="range" (input)="cambiarAltura($event)"
+                              [value]="altura" min="120" max="220" class="form-range">
+                  </div>
+              </div>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="fondoItem">
-            2
-          </div>
-        </div>
       </div>
       <div class="row">
-        <div class="col-lg-12">
-          <button class="btn btn-primary btn-lg btn-block btn-color">Calcular</button>
-        </div>
+          <div class="col-lg-6">
+              <div class="fondoItem">
+                  <div class="contenedor">
+                      <p>Peso</p>
+                      <div class="estiloNumero">
+                          {{ peso }}
+                      </div>
+                      <div>
+                          <i class="fas fa-minus sumaResta" (click)="peso = peso - 1"></i>
+                          <i class="fas fa-plus sumaResta" (click)="peso = peso + 1"></i>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6">
+              <div class="fondoItem">
+                  <div class="contenedor">
+                      <p>Edad</p>
+                      <div class="estiloNumero">
+                          {{ edad }}
+                      </div>
+                      <div>
+                          <i class="fas fa-minus sumaResta" (click)="edad = edad - 1"></i>
+                          <i class="fas fa-plus sumaResta" (click)="edad = edad + 1"></i>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-12">
+              <button (click)="calcularBMI()" class="btn btn-primary btn-lg btn-block btn-color">CALCULAR</button>
+          </div>
       </div>
   </div>
 </div>
